--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header {
+  display: flex;
+  padding: 16px 16px 24px;
+  z-index: 1;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo-header {
+  display: flex;
+  width: 100%;
+}
+
+.logo-header img {
+  max-height: 43px;
+}
+
+.work-header {
+  display: flex;
+  width: 100%;
+  font-size: 19px;
+}
+
+.vert-lines {
+  position: absolute;
+  z-index: 2;
+  padding-top: 16px;
+  display: flex;
+}
+
+.vert-line-1 {
+  height: 100vh;
+  width: 24vw;
+  border-right: solid thin lightgray;
+}
+
+.vert-line-2 {
+  height: 100vh;
+  width: 24vw;
+  border-right: solid thin lightgray;
+}
+
+.vert-line-3 {
+  height: 100vh;
+  width: 24vw;
+  border-right: solid thin lightgray;
+}
+
+.footer {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.logo-footer {
+  width: 100%;
+  display: flex;
+  padding-left: 17px;
+}
+
+.logo-footer img {
+  max-height: 28px;
+}
+
+.contacts {
+  width: 100%;
+  display: flex;
+}
+
+.contact {
+  text-align: left;
+  width: 100%;
 }
